# git-repo-visualiser

./: README.md  pyproject.toml  run.sh
docs/: index.html  style.css
docs/js/: app.js  colors.js  detail-panel.js  filters.js  github-api.js  graph-renderer.js  layout.js  legend-panel.js
src/gitviz/: __init__.py  __main__.py  app.py  cli.py  gitviz.tcss
src/gitviz/git/: filters.py  models.py  repo.py
src/gitviz/layout/: columns.py  renderer.py
src/gitviz/tui/: detail_panel.py  filter_bar.py  graph_widget.py  legend_panel.py  styles.py
