[project]
name = "git-repo-visualiser"
version = "0.1.0"
description = "Terminal-based git repository visualiser with interactive branching tree"
requires-python = ">=3.9"
dependencies = [
    "textual>=0.47.0",
    "rich>=13.0.0",
    "gitpython>=3.1.40",
]

[project.scripts]
gitviz = "gitviz.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gitviz"]
